# digimon-knowledge-graph

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  check_status.py  config.yaml  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  requirements_combined.txt  spec.md  yggdrasil_cli.py
data/: investigation_summary.md
docs/: analysis-specification.md  insights-summary.md  methodology.md  visualization-guide.md
notebooks/: 01_data_exploration.ipynb  02_evolution_analysis.ipynb  03_type_attribute_correlation.ipynb  04_move_network_analysis.ipynb  05_community_detection.ipynb  06_centrality_analysis.ipynb  07_predictive_modeling.ipynb  08_recommendation_system.ipynb  README.md  requirements.txt
notebooks/config/: analysis_config.yaml
notebooks/utils/: __init__.py  graph_algorithms.py  neo4j_connector.py  visualization.py
scripts/: README.md  dev.sh  run.sh
scripts/analysis/: export_results.sh  run_analysis.sh
scripts/database/: backup_neo4j.sh  restore_neo4j.sh  start_neo4j.sh
scripts/parsing/: run_parser.sh
scripts/scraping/: fetch_via_api.sh  investigate_structure.sh  monitor_progress.sh  resume_scraping.sh  run_full_scrape.sh  run_scraper.sh
scripts/setup/: check_requirements.sh  init.sh  install_deps.sh
src/analysis/: __init__.py  main.py
src/graph/: __init__.py  loader.py  main.py
src/parser/: __init__.py  html_parser.py  main.py
src/processor/: __init__.py  main.py  translator.py
src/scraper/: api_fetcher.py  fetcher.py  investigator.py  main.py  robots_checker.py
src/utils/: cache.py  config.py  logger.py  (+1 more)
(+5 files in other folders)
